gl51-master/src/test/deca/context/valid/testObject-useInheritedMethod.deca
//Description
//Utilisation de mthod herité

class A {
    int get() {
        return 0;
    }
}

class B extends A {
    int x = get();
}