gl51-master/src/test/deca/context/invalid/testObject_rule2_7.deca
// Decription
// la method override n'a pas la même signature que la methodd herite

class A {
    void x () {}
}

class B extends A {
    int x(){
        return 0;
    }
}
//passed
